--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
                     <div class="form-group">
                         <input [(ngModel)] ="user.password" type="password" name="password" class="form-control" placeholder="Password" required>
                     </div>
-                    <button class="btn btn-success btn-block" (click)=logIn()>
+                    <button class="btn btn-success btn-block" (click)=signIn()>
                         Ingresar
                     </button>
                 </form>
