--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container p-8">
-  <app-navigation></app-navigation>
+  <app-navigation *ngIf="authService.loggedIn()"></app-navigation>
 </div>
 
 <div class="container p-8">
