--- a/Frontend/src/app/components/navigation/navigation.component.html
+++ b/Frontend/src/app/components/navigation/navigation.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerLink="/productos">PRODUCTOS CRUD</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
+  <a class="navbar-brand mb-0 h1" routerLink="/productos"><i class="fas fa-solid fa-audio-description fa-lg margin-right-sm fa-fw"></i>PRODUCTOS CRUD</a>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ms-4">
       <ng-container *ngIf="!authService.loggedIn(); else loggedIn">
