--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -1,22 +1,62 @@
-<div class="row">
-    <div class="col-md-4 mx-auto">
-        <div class="card">
-            <div class="card-header">
-                Iniciar Sesión
-            </div>
-            <div class="card-body">
-                <form >
-                    <div class="form-group">
-                        <input [(ngModel)] ="user.username" type="text" name="email" class="form-control" placeholder="Email" required autofocus>
-                    </div>
-                    <div class="form-group">
-                        <input [(ngModel)] ="user.password" type="password" name="password" class="form-control" placeholder="Password" required>
-                    </div>
-                    <button class="btn btn-success btn-block" (click)=signIn()>
-                        Ingresar
-                    </button>
-                </form>
-            </div>
-        </div>
+<div class="container py-5 h-100">
+  <div class="row d-flex align-items-center justify-content-center h-100">
+    <div class="col-md-8 col-lg-7 col-xl-6">
+      <img
+        src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg"
+        class="img-fluid"
+        alt="Phone image"
+      />
     </div>
+    <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+      <form>
+        <!-- User input -->
+        <div class="form-outline mb-4">
+          <input
+            [(ngModel)]="user.username"
+            type="text"
+            name="username"
+            class="form-control form-control-lg"
+          />
+          <label class="form-label" for="form1Example13">Usuario</label>
+        </div>
+
+        <!-- Password input -->
+        <div class="form-outline mb-4">
+          <input
+            [(ngModel)]="user.password"
+            type="password"
+            name="password"
+            class="form-control form-control-lg"
+          />
+          <label class="form-label" for="form1Example23">Contraseña</label>
+        </div>
+
+        <div class="d-flex justify-content-around align-items-center mb-4">
+          <!-- Checkbox -->
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="form1Example3"
+              checked
+            />
+            <label class="form-check-label" for="form1Example3">
+              Remember me
+            </label>
+          </div>
+          <a href="#!">Forgot password?</a>
+        </div>
+
+        <!-- Submit button -->
+        <button
+          type="submit"
+          class="btn btn-primary btn-lg btn-block"
+          (click)="signIn()"
+        >
+          Ingresar
+        </button>
+      </form>
+    </div>
+  </div>
 </div>
